<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:orientation="vertical"
    android:id="@+id/layout"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/image"
                    app:layout_constraintTop_toTopOf="parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/night"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:contentDescription="@string/app_name" />
                <LinearLayout
                    android:orientation="horizontal"
                    android:padding="10dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_weight="1"
                        android:textColor="@android:color/white"
                        android:text="@string/version_1"
                        android:textSize="15sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:gravity="right"
                        android:layout_weight="1"
                        android:textColor="@android:color/white"
                        android:text="@string/build_app_21_9_2020"
                        android:textSize="15sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:ignore="RtlHardcoded" />
                </LinearLayout>

                <LinearLayout
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/image"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:padding="10dp"
                        android:textColor="@color/colorTextPrimary"
                        android:text="@string/about"
                        android:textSize="20sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <LinearLayout
                        android:paddingLeft="10dp"
                        android:gravity="center_vertical"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textColor="@color/colorTextPrimary"
                            android:text="@string/developed_by_kyaw_thu"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="5dp"/>
                        <TextView
                            android:textColor="@color/colorTextPrimary"
                            android:text="@string/email_copypaste673_gmail_com"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="5dp"/>
                        <TextView
                            android:textColor="@color/colorTextPrimary"
                            android:text="@string/phone_09750534996"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                    <View
                        android:layout_margin="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="2dp"/>

                    <Button
                        android:id="@+id/close"
                        android:textColor="@color/colorTextPrimary"
                        android:background="@color/colorBackground"
                        android:layout_gravity="right"
                        android:text="@string/close"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        tools:ignore="RtlHardcoded" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>