<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/layout">
    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_vertical"
        android:textStyle="bold"
        android:id="@+id/name"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/colorTextPrimary"
        android:text="@string/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <View
        android:background="@color/colorBackground"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <TextView
        android:gravity="center_vertical"
        android:id="@+id/rename"
        android:padding="10dp"
        android:textColor="@color/colorTextPrimary"
        android:text="@string/rename"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <View
        android:background="@color/colorBackground"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <TextView
        android:gravity="center_vertical"
        android:id="@+id/delete"
        android:padding="10dp"
        android:textColor="@color/colorTextPrimary"
        android:text="@string/delete"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

</LinearLayout>